Fix blurry modal

--- a/html/css/modals.css
+++ b/html/css/modals.css
@@ -1,15 +1,3 @@
-.modal
-{
-  width:60%;
-  max-height: 90%;
-
-  position: absolute !important;
-  top:50% !important;
-  left:50% !important;
-
-  transform:translate(-50%,-50%) !important;
-}
-
 .btn-flat
 {
   background-color: rgb(95, 75, 139);
